--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ commands = pytest
 [testenv:unpinned]
 description = Test with unpinned dependencies, as a user would install now.
 deps =
-  notevennexus
+  chexus
   pytest
 commands = pytest
 
@@ -33,7 +33,7 @@ commands = python -m sphinx -j2 -v -b html -d {toxworkdir}/docs_doctrees docs ht
 description = invoke sphinx-build to build the HTML docs from a released version
 skip_install = true
 deps =
-  notevennexus=={posargs}
+  chexus=={posargs}
   {[testenv:docs]deps}
 allowlist_externals={[testenv:docs]allowlist_externals}
 commands = {[testenv:docs]commands}
