--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,13 +1,13 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: efb5318
+_commit: b400aa7
 _src_path: gh:scipp/copier_template
-description: Validate NeXus files
+description: Validate and check NeXus files
 max_python: '3.12'
 min_python: '3.10'
 namespace_package: ''
 nightly_deps: ''
 orgname: scipp
-prettyname: NotEvenNexus
-projectname: notevennexus
+prettyname: Chexus
+projectname: chexus
 related_projects: ScippNexus
 year: 2023
