--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,6 @@ requires-python = ">=3.10"
 # Make sure to list one dependency per line.
 dependencies = [
   "h5py",
-  "platformdirs<4",  # temporary to make pip-compile-multi happy
 ]
 
 dynamic = ["version"]
@@ -48,7 +47,12 @@ chexus = "chexus.__main__:main"
 
 [tool.pytest.ini_options]
 minversion = "7.0"
-addopts = "-ra -v"
+addopts = """
+--strict-config
+--strict-markers
+-ra
+-v
+"""
 testpaths = "tests"
 filterwarnings = [
   "error",
