--- a/tox.ini
+++ b/tox.ini
@@ -15,8 +15,8 @@ commands = pytest
 [testenv:unpinned]
 description = Test with unpinned dependencies, as a user would install now.
 deps =
+  -r requirements/basetest.txt
   chexus
-  pytest
 commands = pytest
 
 [testenv:docs]
@@ -63,5 +63,5 @@ deps =
   tomli
 skip_install = true
 changedir = requirements
-commands = python ./make_base.py
+commands = python ./make_base.py --nightly scipp
            pip-compile-multi -d . --backtracking
