run copier update manually to bring the bots over

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -6,6 +6,11 @@ package:
 source:
   path: ..
 
+
+{% set pyproject = load_file_data('pyproject.toml') %}
+{% set dependencies = pyproject.get('project', {}).get('dependencies', {}) %}
+
+
 requirements:
   build:
     - setuptools
@@ -13,6 +18,11 @@ requirements:
   run:
     - h5py
     - python>=3.10
+
+  {% for package in dependencies %}
+    - {% if package == "graphviz" %}python-graphviz{% else %}{{ package }}{% endif %}
+  {% endfor %}
+
 
 test:
   imports:
