--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -9,6 +9,7 @@ source:
 
 {% set pyproject = load_file_data('pyproject.toml') %}
 {% set dependencies = pyproject.get('project', {}).get('dependencies', {}) %}
+{% set test_dependencies = pyproject.get('project', {}).get('optional-dependencies', {}).get('test', {}) %}
 
 
 requirements:
@@ -19,8 +20,9 @@ requirements:
     - h5py
     - python>=3.10
 
+  {# Conda does not allow spaces between package name and version, so remove them #}
   {% for package in dependencies %}
-    - {% if package == "graphviz" %}python-graphviz{% else %}{{ package }}{% endif %}
+    - {% if package == "graphviz" %}python-graphviz{% else %}{{ package|replace(" ", "") }}{% endif %}
   {% endfor %}
 
 
@@ -29,7 +31,12 @@ test:
     - chexus
   requires:
     - pytest
-    - scipp
+
+  {# Conda does not allow spaces between package name and version, so remove them #}
+  {% for package in test_dependencies %}
+    - {% if package == "graphviz" %}python-graphviz{% else %}{{ package|replace(" ", "") }}{% endif %}
+  {% endfor %}
+
   source_files:
     - pyproject.toml
     - tests/
